@@ -512,17 +512,16 @@ static inline bool br_multicast_is_router(struct net_bridge *br)
 
 /* br_netfilter.c */
 #ifdef CONFIG_BRIDGE_NETFILTER
-extern int brnf_call_ebtables;
 extern int br_netfilter_init(void);
 extern void br_netfilter_fini(void);
 extern void br_netfilter_rtable_init(struct net_bridge *);
-extern int br_netfilter_run_hooks(void);
 #else
 #define br_netfilter_init()	(0)
 #define br_netfilter_fini()	do { } while(0)
 #define br_netfilter_rtable_init(x)
-#define br_netfilter_run_hooks()	false
 #endif
+
+extern int br_netfilter_run_hooks(void);
 
 static inline int
 BR_HOOK(uint8_t pf, unsigned int hook, struct sk_buff *skb,
